<resources>
    <string name="app_name">trivia</string>
    <string name="quiz_title">Simple Trivia</string>
    <string name="intro_text">Are you smarter than a 5-year-old? You now have the amazing opportunity to check. We know you\'ve been waiting your whole life for that opportunity so we\'ve spent many a sleepless nights to make sure we fulfill your dreams.</string>
    <string name="instrusctions_title">Instructions:</string>
    <string name="text_instructions">Answer each question and calculate your scores at the end. You can always reset the test using the Reset button at the bottom if you\'d like to do the test over or test a friend. Don\'t forget that some questions have more than one correct answer.</string>
    <string name="lets_begin">Let\'s Begin!</string>
    <string name="question_one">1. Which of these is NOT a color?</string>
    <string name="planet_questions_second_part"> is the third planet closest to the Sun.</string>
    <string name="planet_question_first_part">4. The </string>
    <string name="dragon">Dragon</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="calculate">CALCULATE</string>
    <string name="_1000">1000</string>
    <string name="_10">10</string>
    <string name="_100">100</string>
    <string name="question_two">2. A centipede has how may legs?</string>
    <string name="question_three">3. Which of the following animals can be pets?</string>
</resources>
