<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_text" />

        <TextView
            style="@style/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/instrusctions_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_instructions" />

        <TextView
            style="@style/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/lets_begin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_weight="1"
            android:text="@string/question_one" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButtonBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blue" />

            <RadioButton
                android:id="@+id/radioButtonGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Green" />

            <RadioButton
                android:id="@+id/radioButtonFirefly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Firefly" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_weight="1"
            android:text="@string/question_two" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10" />

            <RadioButton
                android:id="@+id/radioButton1000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1000" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_weight="1"
            android:text="@string/question_three" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_24dp"
            android:paddingStart="@dimen/dimen_24dp"
            android:text="@string/dog" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_24dp"
            android:paddingStart="@dimen/dimen_24dp"
            android:text="@string/cat" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_24dp"
            android:paddingStart="@dimen/dimen_24dp"
            android:text="@string/dragon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_question_first_part"/>

            <EditText
                android:id="@+id/name_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_questions_second_part"/>

        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:onClick="showScore"
            android:text="@string/calculate" />

    </LinearLayout>
</ScrollView>